--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,126 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background: linear-gradient(90deg, #1F3040 51.33%, #FF9442 51.5%);;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container{
+  border: 1px solid black;
+  background: white;
+  width: 65%;
+  margin: 5% auto;
+  padding: 5%;
+  height: 70vh;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar {
+  position: absolute;
+  left: 58%;
+  top: 11%;
+  width: 30%;
+  padding: 0;
+}
+.navbar ul{
+  width: 100%;
+  padding: 0;
+  list-style: none;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+.navbar ul li{
+  font-family: 'Roboto'sans-serif;
+  font-size: 16px;
+  padding: 1%;
+  padding-bottom: 2%;
+  width: max-content;
+  margin-inline: 2%;
+  font-weight: 700;
+  cursor: pointer;
+  text-decoration: none;
+  position: relative;
+  opacity: 0.75;
+}
+.navbar li:hover{
+  opacity: 1;
+}
+.navbar li::before {
+  transition: 300ms;
+  height: 2px;
+  content: "";
+  position: absolute;
+  background-color:#FF9442;
+  width: 0%;
+  bottom: 0%;
+}
+.navbar li:hover::before {
+  width: 90%;
+}
+.myInfo{
+  width: 60%;
+}
+.myPic{
+  width: 40%;
+}
+.myPic img{
+  margin-top: 20%;
+  margin-left: 15%;
+}
+.heading{
+  word-spacing: 20%;
+  width: fit-content;
+  margin-top: 15%;
+  font-size: 280%;
+}
+.para{
+  color: #6B6868;
+  font-weight: 500;
+  width: 95%;
+  font-size: 100%;
+  line-height: 145%;
+  margin-bottom: 10%;
+}
+/* .buttonCover{
+  border: 1px solid blue;
+} */
+.buttonCover button{
+  padding: 15px 25px;
+  font-weight: 900;
+}
+.button-5 {
+  background-color: grey;
+  background-image: grey;
+  cursor: pointer;
   color: white;
+  background-image: -moz-linear-gradient(top, black 0%, black 100%); 
+  background-image: -webkit-linear-gradient(top, black 0%,black 100%); 
+  background-image: linear-gradient(to bottom, black 0%,black 100%); 
+  background-size: 300px;
+  background-repeat: no-repeat;
+  background-position: 0%;
+  -webkit-transition: background 300ms ease-in-out;
+  transition: background 300ms ease-in-out;
 }
-
-.App-link {
-  color: #61dafb;
+.button-5:hover {
+  background-position: -200%;
+  transition: background 300ms ease-in-out;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button-4 {
+  border: 2px solid black;
+  background-color: rgba(128, 128, 128, 0.232);
+  background-image: rgba(128, 128, 128, 0.232);
+  cursor: pointer;
+  color: white;
+  background-image: -moz-linear-gradient(top, white 0%, white 100%); 
+  background-image: -webkit-linear-gradient(top, white 0%,white 100%); 
+  background-image: linear-gradient(to bottom, white 0%,white 100%); 
+  background-size: 300px;
+  background-repeat: no-repeat;
+  background-position: 0%;
+  -webkit-transition: background 300ms ease-in-out;
+  transition: background 300ms ease-in-out;
+}
+.button-4:hover {
+  background-position: -200%;
+  transition: background 300ms ease-in-out;
+  border: 2px solid black;
+}
+.flex{
+  display: flex;
+  flex-direction: row;
 }
