--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
-
 body {
-  background: linear-gradient(90deg, #1F3040 51.33%, #FF9442 51.5%);;
+  background: linear-gradient(90deg, #1f3040 51.33%, #ff9442 51.5%);
 }
-.container{
+.container {
   border: 1px solid black;
   background: white;
   width: 65%;
@@ -17,14 +16,14 @@ body {
   width: 30%;
   padding: 0;
 }
-.navbar ul{
+.navbar ul {
   width: 100%;
   padding: 0;
   list-style: none;
   display: flex;
 }
-.navbar ul li{
-  font-family: 'Roboto'sans-serif;
+.navbar ul li {
+  font-family: "Roboto" sans-serif;
   font-size: 16px;
   padding: 1%;
   padding-bottom: 2%;
@@ -36,7 +35,7 @@ body {
   position: relative;
   opacity: 0.75;
 }
-.navbar li:hover{
+.navbar li:hover {
   opacity: 1;
 }
 .navbar li::before {
@@ -44,31 +43,31 @@ body {
   height: 2px;
   content: "";
   position: absolute;
-  background-color:#FF9442;
+  background-color: #ff9442;
   width: 0%;
   bottom: 0%;
 }
 .navbar li:hover::before {
   width: 90%;
 }
-.myInfo{
+.myInfo {
   width: 60%;
 }
-.myPic{
+.myPic {
   width: 40%;
 }
-.myPic img{
+.myPic img {
   margin-top: 20%;
   margin-left: 15%;
 }
-.heading{
+.heading {
   word-spacing: 20%;
   width: fit-content;
   margin-top: 15%;
   font-size: 280%;
 }
-.para{
-  color: #6B6868;
+.para {
+  color: #6b6868;
   font-weight: 500;
   width: 95%;
   font-size: 100%;
@@ -78,18 +77,20 @@ body {
 /* .buttonCover{
   border: 1px solid blue;
 } */
-.buttonCover button{
+.buttonCover button {
   padding: 15px 25px;
   font-weight: 900;
 }
 .button-5 {
+  margin-left: 9%;
+  border: none;
   background-color: grey;
   background-image: grey;
   cursor: pointer;
   color: white;
-  background-image: -moz-linear-gradient(top, black 0%, black 100%); 
-  background-image: -webkit-linear-gradient(top, black 0%,black 100%); 
-  background-image: linear-gradient(to bottom, black 0%,black 100%); 
+  background-image: -moz-linear-gradient(top, black 0%, black 100%);
+  background-image: -webkit-linear-gradient(top, black 0%, black 100%);
+  background-image: linear-gradient(to bottom, black 0%, black 100%);
   background-size: 300px;
   background-repeat: no-repeat;
   background-position: 0%;
@@ -105,10 +106,10 @@ body {
   background-color: rgba(128, 128, 128, 0.232);
   background-image: rgba(128, 128, 128, 0.232);
   cursor: pointer;
-  color: white;
-  background-image: -moz-linear-gradient(top, white 0%, white 100%); 
-  background-image: -webkit-linear-gradient(top, white 0%,white 100%); 
-  background-image: linear-gradient(to bottom, white 0%,white 100%); 
+  color: black;
+  background-image: -moz-linear-gradient(top, white 0%, white 100%);
+  background-image: -webkit-linear-gradient(top, white 0%, white 100%);
+  background-image: linear-gradient(to bottom, white 0%, white 100%);
   background-size: 300px;
   background-repeat: no-repeat;
   background-position: 0%;
@@ -120,7 +121,43 @@ body {
   transition: background 300ms ease-in-out;
   border: 2px solid black;
 }
-.flex{
+.flex {
   display: flex;
   flex-direction: row;
+}
+
+@media screen and (max-width: 900px) {
+  .navbar {
+    display: none;
+  }
+  .button-5 {
+    margin-left: 0%;
+    margin-top: 10%;
+    font-size: 75%;
+  }
+  .button-4 {
+    font-size: 75%;
+  }
+  .heading {
+    font-size: 180%;
+  }
+
+}
+
+@media screen and (max-width: 550px) {
+  .container {
+    height: 80vh;
+    margin: 15% auto;
+  }
+  .center {
+    margin: 25% auto;
+  }
+  .heading {
+    font-size: 100%;
+  }
+  .para {
+    font-size: 80%;
+  }
+
+
 }
